[project]
name = "pcb2blender"
version = "2.17.2"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = ["error-helper==1.4", "pillow==11.3.0", "skia-python==138.0"]
license = "GPL-3.0-or-later"

[dependency-groups]
dev = [
    "fake-bpy-module",
    "numpy",
    "pip",
    "pytest",
    "pytest-blender",
    "requests",
    "snakeviz",
    "tomlkit",
]
ci = ["error-helper", "pip", "pytest", "pytest-blender", "requests", "tomlkit"]

[tool.pyright]
exclude = [".venv", "pcb2blender_importer/io_scene_x3d"]
typeCheckingMode = "strict"
reportIgnoreCommentWithoutRule = "warning"
reportInvalidCast = "warning"
reportImplicitRelativeImport = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportInvalidTypeForm = false
reportPrivateImportUsage = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownVariableType = false

[tool.ruff]
line-length = 100

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint.isort]
combine-as-imports = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "blender",
    "pcbnew",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
blender = ["addon_utils", "bpy", "bpy_extras", "bl_ui", "bmesh", "mathutils", "numpy"]
pcbnew = ["pcbnew", "wx"]
